chrome/test/data/purify/unit_tests.exe_UMR.txt
Uninitialized memory read in AutocompleteEditViewWin::SetSelectionRange(_charrange const&)
Error Location
   chrome/browser/autocomplete/autocomplete_edit_view_win.h  AutocompleteEditViewWin::SetSelectionRange(_charrange const&)
   chrome/browser/autocomplete/autocomplete_edit_view_win.cc  AutocompleteEditViewWin::EmphasizeURLComponents(void)
   chrome/browser/autocomplete/autocomplete_edit_view_win.cc  AutocompleteEditViewWin::TextChanged(void)
   chrome/browser/autocomplete/autocomplete_edit_view_win.cc  AutocompleteEditViewWin::RevertAll(void)
   chrome/browser/autocomplete/autocomplete_edit_view_win.cc  AutocompleteEditViewWin::Update(TabContents const*)
   chrome/browser/views/location_bar_view.cc  LocationBarView::Update(TabContents const*)
   chrome/browser/views/toolbar_view.cc  BrowserToolbarView::Update(TabContents *,bool)
   chrome/browser/views/frame/browser_view.cc  BrowserView::UpdateToolbar(TabContents *,bool)
   chrome/browser/browser.cc  Browser::UpdateToolbar(bool)
   chrome/browser/browser.cc  Browser::ScheduleUIUpdate(TabContents const*,UINT)
   chrome/browser/browser.cc  Browser::OpenURLFromTab(TabContents *,GURL const&,GURL const&,WindowOpenDisposition,UINT)
   chrome/test/ui_test_utils.cc  ui_test_utils::NavigateToURL(Browser *,GURL const&)
   chrome/browser/extensions/extension_content_script_inject_unittest.cc  ExtensionContentScriptInjectTest_Simple_Test::RunTestOnMainThread(void)
   chrome/test/in_process_browser_test.cc  InProcessBrowserTest::RunTestOnMainThreadLoop(void)
   base/tuple.h  ?DispatchToMethod@VInProcessBrowserTest@@P81@AEXXZ@@YAXPAVInProcessBrowserTest@@P80@AEXXZABUTuple0@@@Z
   ^^^  

Uninitialized memory read in AutocompleteEditViewWin::SetSelectionRange(_charrange const&)
Error Location
   chrome/browser/autocomplete/autocomplete_edit_view_win.h  AutocompleteEditViewWin::SetSelectionRange(_charrange const&)
   chrome/browser/autocomplete/autocomplete_edit_view_win.cc  AutocompleteEditViewWin::EmphasizeURLComponents(void)
   chrome/browser/autocomplete/autocomplete_edit_view_win.cc  AutocompleteEditViewWin::TextChanged(void)
   chrome/browser/autocomplete/autocomplete_edit_view_win.cc  AutocompleteEditViewWin::RevertAll(void)
   chrome/browser/autocomplete/autocomplete_edit_view_win.cc  AutocompleteEditViewWin::Update(TabContents const*)
   chrome/browser/views/location_bar_view.cc  LocationBarView::Update(TabContents const*)
   chrome/browser/views/toolbar_view.cc  BrowserToolbarView::Update(TabContents *,bool)
   chrome/browser/views/frame/browser_view.cc  BrowserView::UpdateToolbar(TabContents *,bool)
   chrome/browser/browser.cc  Browser::UpdateToolbar(bool)
   chrome/browser/browser.cc  Browser::TabSelectedAt(TabContents *,TabContents *,int,bool)
   chrome/browser/tabs/tab_strip_model.cc  TabStripModel::ChangeSelectedContentsFrom(TabContents *,int,bool)
   chrome/browser/tabs/tab_strip_model.cc  TabStripModel::InsertTabContentsAt(int,TabContents *,bool,bool)
   chrome/browser/tabs/tab_strip_model.cc  TabStripModel::AddTabContents(TabContents *,int,UINT,bool)
   chrome/browser/browser.cc  Browser::AddTabWithURL(GURL const&,GURL const&,UINT,bool,int,SiteInstance *)
   chrome/test/in_process_browser_test.cc  InProcessBrowserTest::CreateBrowser(Profile *)
   chrome/test/in_process_browser_test.cc  InProcessBrowserTest::RunTestOnMainThreadLoop(void)
   base/tuple.h  ?DispatchToMethod@VInProcessBrowserTest@@P81@AEXXZ@@YAXPAVInProcessBrowserTest@@P80@AEXXZABUTuple0@@@Z
   ^^^  

Uninitialized memory read in AutocompleteEditViewWin::SetSelectionRange(_charrange const&)
Error Location
   chrome/browser/autocomplete/autocomplete_edit_view_win.h  AutocompleteEditViewWin::SetSelectionRange(_charrange const&)
   chrome/browser/autocomplete/autocomplete_edit_view_win.cc  AutocompleteEditViewWin::EmphasizeURLComponents(void)
   chrome/browser/autocomplete/autocomplete_edit_view_win.cc  AutocompleteEditViewWin::TextChanged(void)
   chrome/browser/autocomplete/autocomplete_edit_view_win.cc  AutocompleteEditViewWin::RevertAll(void)
   chrome/browser/autocomplete/autocomplete_edit_view_win.cc  AutocompleteEditViewWin::Update(TabContents const*)
   chrome/browser/views/location_bar_view.cc  LocationBarView::Update(TabContents const*)
   chrome/browser/views/toolbar_view.cc  BrowserToolbarView::Update(TabContents *,bool)
   chrome/browser/views/frame/browser_view.cc  BrowserView::UpdateToolbar(TabContents *,bool)
   chrome/browser/views/frame/browser_view.cc  BrowserView::TabSelectedAt(TabContents *,TabContents *,int,bool)
   chrome/browser/tabs/tab_strip_model.cc  TabStripModel::ChangeSelectedContentsFrom(TabContents *,int,bool)
   chrome/browser/tabs/tab_strip_model.cc  TabStripModel::InsertTabContentsAt(int,TabContents *,bool,bool)
   chrome/browser/tabs/tab_strip_model.cc  TabStripModel::AddTabContents(TabContents *,int,UINT,bool)
   chrome/browser/browser.cc  Browser::AddTabWithURL(GURL const&,GURL const&,UINT,bool,int,SiteInstance *)
   chrome/test/in_process_browser_test.cc  InProcessBrowserTest::CreateBrowser(Profile *)
   chrome/test/in_process_browser_test.cc  InProcessBrowserTest::RunTestOnMainThreadLoop(void)
   base/tuple.h  ?DispatchToMethod@VInProcessBrowserTest@@P81@AEXXZ@@YAXPAVInProcessBrowserTest@@P80@AEXXZABUTuple0@@@Z
   ^^^  

Uninitialized memory read in AutocompleteEditViewWin::SetSelectionRange(_charrange const&)
Error Location
   chrome/browser/autocomplete/autocomplete_edit_view_win.h  AutocompleteEditViewWin::SetSelectionRange(_charrange const&)
   chrome/browser/autocomplete/autocomplete_edit_view_win.cc  AutocompleteEditViewWin::EmphasizeURLComponents(void)
   chrome/browser/autocomplete/autocomplete_edit_view_win.cc  AutocompleteEditViewWin::TextChanged(void)
   chrome/browser/autocomplete/autocomplete_edit_view_win.cc  AutocompleteEditViewWin::RevertAll(void)
   chrome/browser/autocomplete/autocomplete_edit_view_win.cc  AutocompleteEditViewWin::Update(TabContents const*)
   chrome/browser/views/location_bar_view.cc  LocationBarView::Update(TabContents const*)
   chrome/browser/views/location_bar_view.cc  LocationBarView::Init(void)
   chrome/browser/views/toolbar_view.cc  BrowserToolbarView::CreateCenterStack(Profile *)
   chrome/browser/views/toolbar_view.cc  BrowserToolbarView::Init(Profile *)
   chrome/browser/views/frame/browser_view.cc  BrowserView::Init(void)
   chrome/browser/views/frame/browser_view.cc  BrowserView::ViewHierarchyChanged(bool,View::views *,View::views *)
   chrome/views/view.cc  views::View::ViewHierarchyChangedImpl(bool,bool,View::views *,View::views *)
   chrome/views/view.cc  views::View::PropagateAddNotifications(View::views *,View::views *)
   chrome/views/view.cc  views::View::AddChildView(int,View::views *,bool)
   chrome/views/view.cc  views::View::AddChildView(int,View::views *)
   chrome/views/window/non_client_view.cc  views::NonClientView::ViewHierarchyChanged(bool,View::views *,View::views *)
   chrome/views/view.cc  views::View::ViewHierarchyChangedImpl(bool,bool,View::views *,View::views *)
   chrome/views/view.cc  views::View::PropagateAddNotifications(View::views *,View::views *)
   chrome/views/view.cc  views::View::AddChildView(int,View::views *,bool)
   chrome/views/view.cc  views::View::AddChildView(View::views *)
   chrome/views/widget/widget_win.cc  views::WidgetWin::SetContentsView(View::views *)
   chrome/views/window/window_win.cc  views::WindowWin::Init(HWND__ *,Rect::gfx const&)
   chrome/browser/views/frame/browser_frame.cc  BrowserFrame::Init(void)
   chrome/browser/views/frame/browser_view.cc  BrowserWindow::CreateBrowserWindow(Browser *)
   chrome/browser/browser.cc  Browser::CreateBrowserWindow(void)
   chrome/browser/browser.cc  Browser::Create(Profile *)
   chrome/test/in_process_browser_test.cc  InProcessBrowserTest::CreateBrowser(Profile *)
   chrome/test/in_process_browser_test.cc  InProcessBrowserTest::RunTestOnMainThreadLoop(void)
   base/tuple.h  ?DispatchToMethod@VInProcessBrowserTest@@P81@AEXXZ@@YAXPAVInProcessBrowserTest@@P80@AEXXZABUTuple0@@@Z
   ^^^  
